--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": ["input1.txt"],
+            "args": ["input.txt"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
